--- a/.github/workflows/auto-merge-pr-2.yml
+++ b/.github/workflows/auto-merge-pr-2.yml
@@ -1,3 +1,16 @@
+name: Auto Merge PR
+
+on:
+  pull_request:
+    types:
+      - labeled
+      - unlabeled
+      - synchronize
+      - opened
+      - edited
+      - ready_for_review
+      - reopened
+      - unlocked
 jobs:
   createPullRequest:
     runs-on: ubuntu-latest
